--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My Simple Web Page</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello!</h1>
     <p>This is a simple paragraph on my first web page.</p>
 </body>
+
 </html>
